# ecklix

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  elix-builtins.cpp  elix-expr.cpp  elix-main.cpp  elix-math.cpp  elix-object.cpp  elix-scanner.cpp  elix.cpp  elix.hpp
